feat(swagger): add docs for new upload photo feature
